@@ -27,8 +27,9 @@
  * @summary Test primitive box caches integrity in various scenarios (IntegerCache etc)
  * @requires vm.cds.write.archived.java.heap
  * @library /test/jdk/lib/testlibrary /test/lib /test/hotspot/jtreg/runtime/cds/appcds
- * @compile CheckIntegerCacheApp.java
+ * @compile --add-exports java.base/jdk.internal.misc=ALL-UNNAMED CheckIntegerCacheApp.java ArchivedIntegerHolder.java
  * @run driver jdk.test.lib.helpers.ClassFileInstaller -jar boxCache.jar CheckIntegerCacheApp
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller -jar boxCache-boot.jar ArchivedIntegerHolder
  * @run driver ArchivedIntegerCacheTest
  */
 
@@ -41,6 +42,19 @@ import jdk.test.lib.helpers.ClassFileInstaller;
 
 public class ArchivedIntegerCacheTest {
 
+    public static String[] mixArgs(String... args) {
+        String bootJar = ClassFileInstaller.getJarPath("boxCache-boot.jar");
+
+        String[] newArgs = new String[args.length + 5];
+        newArgs[0] = "--add-exports";
+        newArgs[1] = "java.base/jdk.internal.misc=ALL-UNNAMED";
+        newArgs[2] = "-Xbootclasspath/a:" + bootJar;
+        newArgs[3] = "-XX:+IgnoreUnrecognizedVMOptions";
+        newArgs[4] = "-XX:ArchiveHeapTestClass=ArchivedIntegerHolder";
+        System.arraycopy(args, 0, newArgs, 5, args.length);
+        return newArgs;
+    }
+
     public static void main(String[] args) throws Exception {
         String appJar = ClassFileInstaller.getJarPath("boxCache.jar");
 
@@ -51,15 +65,15 @@ public class ArchivedIntegerCacheTest {
         // Dump default archive
         //
         OutputAnalyzer output = TestCommon.dump(appJar,
-                TestCommon.list("CheckIntegerCacheApp"));
+                TestCommon.list("CheckIntegerCacheApp"),
+                mixArgs());
         TestCommon.checkDump(output);
 
         // Test case 1)
         // - Default options
         System.out.println("----------------------- Test case 1 ----------------------");
         output = TestCommon.exec(appJar,
-                "CheckIntegerCacheApp",
-                "127");
+                mixArgs("CheckIntegerCacheApp", "127"));
         TestCommon.checkExec(output);
 
         // Test case 2)
@@ -67,9 +81,8 @@ public class ArchivedIntegerCacheTest {
         // - Larger -XX:AutoBoxCacheMax
         System.out.println("----------------------- Test case 2 ----------------------");
         output = TestCommon.exec(appJar,
-                "-XX:AutoBoxCacheMax=20000",
-                "CheckIntegerCacheApp",
-                "20000");
+                mixArgs("-XX:AutoBoxCacheMax=20000",
+                        "CheckIntegerCacheApp", "20000"));
         TestCommon.checkExec(output);
 
         //
@@ -77,7 +90,7 @@ public class ArchivedIntegerCacheTest {
         //
         output = TestCommon.dump(appJar,
                 TestCommon.list("CheckIntegerCacheApp"),
-                "-XX:AutoBoxCacheMax=20000");
+                mixArgs("-XX:AutoBoxCacheMax=20000"));
         TestCommon.checkDump(output);
 
         // Test case 3)
@@ -85,10 +98,8 @@ public class ArchivedIntegerCacheTest {
         // - Default options
         System.out.println("----------------------- Test case 3 ----------------------");
         output = TestCommon.exec(appJar,
-                "--module-path",
-                moduleDir.toString(),
-                "CheckIntegerCacheApp",
-                "127");
+                mixArgs("--module-path", moduleDir.toString(),
+                        "CheckIntegerCacheApp", "127"));
         TestCommon.checkExec(output);
 
 
@@ -97,11 +108,9 @@ public class ArchivedIntegerCacheTest {
         // - Matching options
         System.out.println("----------------------- Test case 4 ----------------------");
         output = TestCommon.exec(appJar,
-                "--module-path",
-                moduleDir.toString(),
-                "-XX:AutoBoxCacheMax=20000",
-                "CheckIntegerCacheApp",
-                "20000");
+                mixArgs("--module-path", moduleDir.toString(),
+                        "-XX:AutoBoxCacheMax=20000",
+                        "CheckIntegerCacheApp", "20000"));
         TestCommon.checkExec(output);
 
         // Test case 5)
@@ -109,23 +118,21 @@ public class ArchivedIntegerCacheTest {
         // - Larger requested cache
         System.out.println("----------------------- Test case 5 ----------------------");
         output = TestCommon.exec(appJar,
-                "--module-path",
-                moduleDir.toString(),
-                "-XX:AutoBoxCacheMax=30000",
-                "CheckIntegerCacheApp",
-                "30000");
+                mixArgs("--module-path", moduleDir.toString(),
+                        "-XX:AutoBoxCacheMax=30000",
+                        "CheckIntegerCacheApp", "30000"));
         TestCommon.checkExec(output);
 
         // Test case 6)
         // - Cache is too large to archive
         output = TestCommon.dump(appJar,
                 TestCommon.list("CheckIntegerCacheApp"),
-                "-XX:AutoBoxCacheMax=2000000",
-                "-Xmx1g",
-                "-XX:NewSize=1g",
-                "-Xlog:cds+heap=info",
-                "-Xlog:gc+region+cds",
-                "-Xlog:gc+region=trace");
+                mixArgs("-XX:AutoBoxCacheMax=2000000",
+                        "-Xmx1g",
+                        "-XX:NewSize=1g",
+                        "-Xlog:cds+heap=info",
+                        "-Xlog:gc+region+cds",
+                        "-Xlog:gc+region=trace"));
         TestCommon.checkDump(output,
             "Cannot archive the sub-graph referenced from [Ljava.lang.Integer; object");
     }
